# ml_intro_9

./: .gitignore  README.md  pyproject.toml
src/ml_intro_9/: eda.py  pipeline.py  prepare_test.py  train.py  tuning.py
tests/: sample_train.csv  test_ml_intro_9.py  test_train.py
