[tool.poetry]
name = "ml_intro_9"
version = "0.1.0"
description = ""
authors = ["Andrey <Andrey@DESKTOP-OMHSODK>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "~1.22"
pandas = "^1.4.2"
scipy = "^1.8.0"
pandas-profiling = "^3.2.0"
pywin32 = "^304"
mlflow = "^1.25.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eda = "ml_intro_9.eda:main"
